[gd_scene load_steps=4 format=3 uid="uid://bdtajo508sxr"]

[ext_resource type="Script" path="res://scripts/world_element/Save.gd" id="1_bkr8f"]
[ext_resource type="Texture2D" uid="uid://ofc3pxuhiryy" path="res://assets/sprites/map element/Saves/Save_0.png" id="2_2le8m"]
[ext_resource type="Texture2D" uid="uid://cas21ychjt452" path="res://assets/sprites/map element/Saves/Save_1.png" id="3_pggf3"]

[node name="Save" type="Node2D"]
script = ExtResource("1_bkr8f")
save_off = ExtResource("2_2le8m")
save_on = ExtResource("3_pggf3")

[node name="SaveSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_2le8m")

[node name="SwitchOffTimer" type="Timer" parent="."]

[connection signal="timeout" from="SwitchOffTimer" to="." method="set_off"]
